# NCW

./: .gitconfig  .gitignore  CMakeLists.txt  Config.bff  Config.bff.tmpl  FBuild  README.md  Unity1.cpp  editor.sh  fbuild.bff  project.pbxproj  test.bat
dependencies/glad/: CMakeLists.txt  VERSION.txt  build_win.bat  glad.bff
dependencies/glew/: CMakeLists.txt
dependencies/glew/1.11.0/: CMakeLists.txt
dependencies/glfw/: CMakeLists.txt  glfw.bff
dependencies/libfswatch/: CMakeLists.txt  libfswatch.bff
dependencies/libfswatch/0.2.4/: CMakeLists.txt
dependencies/libnoise/: CMakeLists.txt  libnoise.bff
dependencies/libnoise/1.0.0/: INSTALL.vcxproj  INSTALL.vcxproj.filters
dependencies/libnoise/doc/: INSTALL.vcxproj
dependencies/libyaml/: CMakeLists.txt  libyaml.bff
dependencies/lodepng/: CMakeLists.txt  lodepng.bff
dependencies/lodepng/20131222/: CMakeLists.txt
dependencies/noise/: CMakeLists.txt  libnoise.plg
dependencies/noiseutils/: CMakeLists.txt  noiseutils.bff
dependencies/noiseutils/0.9.0.1/: CMakeLists.txt
dependencies/rhea/: CMakeLists.txt  rhea.bff
dependencies/sqlite/: CMakeLists.txt  sqlite.bff
dependencies/zlib/: CMakeLists.txt  zlib.bff
source/: CMakeLists.txt  GLIncludes.h  GLSL.cpp  GLSL.h  source.bff
source/DataCLI/: CMakeLists.txt  Console.h  ConvertCommand.cpp  ConvertCommand.h  ConvertDocumentCommand.cpp  ConvertDocumentCommand.h  ConvertModelCommand.cpp  ConvertModelCommand.h  DataCLI.bff  Database.cpp  Database.h  DumpCommand.cpp  DumpCommand.h  Main.cpp  Scrambler.cpp  Scrambler.h
source/Editor/: CMakeLists.txt  Controls.cpp  Controls.h  Editor.bff  Main.cpp  Main.h
source/Editor/AnimationStation/: AnimationDebugSystem.cpp  AnimationDebugSystem.h  AnimationSystem.cpp  AnimationSystem.h  Commands.h  Dock.cpp  Dock.h  Editor.cpp  Editor.h  Events.h  Sidebar.cpp  Sidebar.h  SimpleAnimationSystem.cpp  SimpleAnimationSystem.h  SkeletonList.cpp  SkeletonList.h  State.cpp  State.h
source/Editor/Command/: CommandStack.h  Commands.h
source/Editor/Constrainer/: CollapsibleTreeItem.cpp  CollapsibleTreeItem.h  CollapsibleTreeVC.cpp  CollapsibleTreeVC.h  CollapsibleTreeView.cpp  CollapsibleTreeView.h  ConstrainerController.cpp  ConstrainerController.h  ConstrainerModel.cpp  ConstrainerModel.h  ConstrainerVC.cpp  ConstrainerVC.h  ConstraintInfoVC.cpp  ConstraintInfoVC.h  ConstraintListVC.cpp  ConstraintListVC.h  Editor.cpp  Editor.h  ElementInfoVC.cpp  ElementInfoVC.h  ElementListItem.cpp  ElementListItem.h  ElementListSidebar.cpp  ElementListSidebar.h  InfoSidebarVC.cpp  InfoSidebarVC.h  Sidebar.cpp  Sidebar.h  UIElementDesignerWrapper.cpp  UIElementDesignerWrapper.h  UIElementDesignerWrapper.hpp
source/Editor/Helpers/: Controls.cpp  Controls.h  SubWindow.cpp  SubWindow.h
source/Editor/Imgui/: Context.cpp  Context.h  Extensions.cpp  Extensions.h  Meta.cpp  Meta.h  Scrubber.h  StateWindow.cpp  StateWindow.h
source/Editor/ModelMaker/: Backdrop.cpp  Backdrop.h  Dock.cpp  Dock.h  Editor.cpp  Editor.h  Events.h  Sidebar.cpp  Sidebar.h  State.cpp  State.h
source/Editor/ParticleSpace/: Dock.cpp  Dock.h  Editor.cpp  Editor.h  Events.h  Sidebar.cpp  Sidebar.h  State.cpp  State.h
source/Editor/ShaderLand/: Editor.cpp  Editor.h  Events.h  Mesh.cpp  Mesh.h  State.cpp  State.h  Tools.cpp  Tools.h
source/Editor/Shaders/: EditorBackdrop.frag  EditorBackdrop.geom  EditorBackdrop.vert  Imgui.frag
source/Editor/Skeletor/: AnimationSystem.cpp  AnimationSystem.h  Dock.cpp  Dock.h  Editor.cpp  Editor.h  Events.h  Sidebar.cpp  Sidebar.h  SkeletonSystem.cpp  SkeletonSystem.h  State.cpp  State.h
source/Editor/States/: AnimationStation.cpp  AnimationStation.h
source/Editor/Systems/: AnimationSystem.cpp  AnimationSystem.h  EditorBackdropSystem.cpp  EditorBackdropSystem.h
source/Editor/UI/: Binding.h  Button.cpp  Button.h  Controls.cpp  Controls.h  Element.cpp  Element.h  Image.cpp  Image.h  Label.cpp  Label.h  NumDisplay.cpp  NumDisplay.h  ScrollBar.cpp  ScrollBar.h  Scrubber.cpp  Scrubber.h  StateWindow.cpp  StateWindow.h  StationaryScrubber.cpp  StationaryScrubber.h  SubWindow.cpp  SubWindow.h  SubWindowSwapper.cpp  SubWindowSwapper.h  Text.cpp  Text.h  TextButton.cpp  TextButton.h  TextField.cpp  TextField.h  UISwapper.cpp  UISwapper.h
source/Editor/rxcpp/: rx-composite_exception.h  rx-connectable_observable.h  rx-coordination.h  rx-coroutine.h  rx-grouped_observable.h  rx-includes.h  rx-lite.h  rx-notification.h  rx-observable.h  rx-observer.h  rx-operators.h  rx-predef.h  rx-scheduler.h  rx-sources.h  rx-subjects.h  rx-subscriber.h  rx-subscription.h  rx-test.h  rx-util.h  rx.h
source/Engine/: CMakeLists.txt  CMakeLists.txt.orig  CMakeLists_BASE_6887.txt  CMakeLists_LOCAL_6887.txt  CMakeLists_REMOTE_6887.txt  Engine.bff
source/Engine/Aggregator/: Aggregator.cpp  Aggregator.h  Image.cpp  Image.h  Rect.cpp  Rect.h  Text.cpp  Text.h
source/Engine/Core/: Audio.cpp  Audio.h  Binding.cpp  Binding.h  Bounded.h  Command.h  Config.h  Context.cpp  Context.h  Either.h  Failure.h  File.h  FileSystemProvider.cpp  FileSystemProvider.h  Format.cpp  Format.h  Input.cpp  Input.h  Maybe.h  Paths.cpp  Paths.h  Pool.h  Scope.h  Singleton.h  State.cpp  State.h  StateManager.cpp  StateManager.h  Timer.cpp  Timer.h  Window.cpp  Window.h
source/Engine/Entity/: Component.cpp  Component.h  ComponentHandle.h  ComponentHandle.natvis  Entity.h  EntityManager.cpp  EntityManager.h  Transform.cpp  Transform.h
source/Engine/Event/: Event.cpp  Event.h  EventLink.h  EventManager.cpp  EventManager.h  InputEvent.h  MouseInputTransformer.h  Receiver.h  Transformer.cpp  Transformer.h
source/GL/: includes.h
source/Game/: CMakeLists.txt  CMakeLists.txt.orig  DebugHelper.cpp  DebugHelper.h  Game.bff  Main.cpp  Main.cpp.orig  Main.h  Voxel.h
source/Sandbox/: CMakeLists.txt  Main.cpp  Sandbox.bff
source/Shared/: CMakeLists.txt  DebugHelper.cpp  DebugHelper.h  Main.h  Shared.bff  Voxel.h
source/Tests/: CMakeLists.txt  FirstTest.cpp  Main.cpp  SecondTest.cpp  Tests.bff  catch.h
source/WorldGenerator/: Main.cpp  Main.h  WorldGenerator.bff
(+6852 files in other folders)
